@@ -66,6 +66,7 @@ Mobile-Bros, LLC (http://www.mobile-bros.com)
 Morrison, Tyler (http://www.haikusoftware.com)
 Murff, James (http://www.deedogdevelopment.com/)
 Norris, Eoin
+Oestermeier, Uwe
 P-Edge Media (http://www.p-edge.nl/)
 Prop Group (http://www.prop.gr)
 Payne, Robert (http://zwopple.com)
@@ -96,7 +97,6 @@ Yellott, John (http://www.dreamforgeentertainment.com/)
 Yip, Alex (http://www.zenkimoto.com/)
 Zedfast Solutions Corp (http://zedfast.com/)
 Zemlyanov, Anton
-
 
 
 Thank you!
